tests/types/errors/user_unknown_field.mochi
 type Person { name: string }
 let p: Person
 let x = p.age
